# prism

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  refresh-tracker-baselines.yml  release.yml
docs/plans/: 2026-05-22-001-feat-reveal-files-uncap-memory-scan-plan.md
src/: App.test.ts  App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  app.dev.manifest  app.manifest  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: accounts.rs  commands.rs  lib.rs  main.rs
src-tauri/src/data/: flag_allowlist.rs  known_tools.rs  mod.rs  suspicious_flags.rs  tracker_baselines.rs
src-tauri/src/models/: mod.rs  scan_report.rs
src-tauri/src/reports/: report_generator.rs
src-tauri/src/scanners/: client_settings_scanner.rs  file_scanner.rs  memory_scanner.rs  mod.rs  process_scanner.rs  progress.rs
src-tauri/tools/memory_evidence_exporter/: Cargo.toml
src-tauri/tools/memory_evidence_exporter/src/: main.rs
src-tauri/tools/memory_scan_harness/: Cargo.toml
src-tauri/tools/memory_scan_harness/src/: main.rs
