[package]
name = "fflag-check"
version = "0.6.11"
description = "TSBCC FFlag Scanner — tournament integrity tool for Roblox FFlag detection"
authors = ["TSBCC"]
edition = "2021"

[lib]
name = "fflag_check_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.38"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
walkdir = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# Fast multi-pattern search + byte skip + work-stealing parallelism.
# Used by the memory scanner to turn an O(N × patterns) string search
# into O(N), and to fan scan-region work across CPU cores.
aho-corasick = "1"
memchr = "2"
rayon = "1"

[target.'cfg(windows)'.dependencies]
# Microsoft's official bindings, replacing the unmaintained winapi 0.3.
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_Debug",
] }
