[package]
name = "memory-evidence-exporter"
version = "0.6.13"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
fflag-check = { path = "../.." }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sysinfo = "0.38"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_Debug",
] }
